--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
+    "firebase": "8.10.0",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.2.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-redux": "^8.0.1"
+    "react-query": "^3.38.0",
+    "react-query-devtools": "^2.6.3",
+    "react-redux": "^8.0.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.26",
