--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
     "@types/react-redux": "^7.1.24",
+    "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
