--- a/functions/package.json
+++ b/functions/package.json
@@ -26,5 +26,8 @@
     "firebase-functions-test": "^0.2.0",
     "typescript": "^4.5.4"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@types/react": "18.0.6"
+  }
 }
