--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
+  },
+  "resolutions": {
+    "@types/react": "18.0.6"
   }
 }
